--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
 
-    <header class="main-header">
-      <nav class="main-navigation">
-        <div class="container main-navigation-container">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <div class="container main-navigation-container">
         <a class="main-header_logo" href="#">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
         </a>
@@ -25,14 +25,14 @@
           <li><a class="user-navigation_link" href="#">корзина</a></li>
         </ul>
       </div>
-      </nav>
-    </header>
+    </nav>
+  </header>
 
-    <main class="content">
-   <h1 class="visually-hidden">Дизйн-студия "Нёрдс"</h1>
-      <section class="slider">
-        <div class="container">
-          <h2 class="visually-hidden">Преимущества</h2>
+  <main class="content">
+    <h1 class="visually-hidden">Дизйн-студия "Нёрдс"</h1>
+    <section class="slider">
+      <div class="container">
+        <h2 class="visually-hidden">Преимущества</h2>
         <div class="slider-controls">
           <i class="active"></i>
           <i></i>
@@ -55,11 +55,10 @@
             <a class="slider-item_btn btn" href="#">Узнать больше</a>
           </li>
         </ul>
-    </div>
-        </section>
+      </div>
+    </section>
 
-
-  <div class="container">
+    <div class="container">
       <section class="products">
         <h2 class="visually-hidden">Продукты студии</h2>
 
@@ -88,7 +87,7 @@
       <section class="studio-inform">
         <h2 class="visually-hidden">О студии</h2>
         <div class="studio-inform_article">
-        <p class="studio-inform_headline">Мы — маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
+          <p class="studio-inform_headline">Мы — маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
           <p class="studio-inform_text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук. Как роботы.</p>
           <h3>выполняем заказы на разработку:</h3>
           <ul class="studio-inform_list">
@@ -99,17 +98,15 @@
         </div>
         <div class="studio-inform_statistics">
           <div class="studio-inform_container">
-           <h3>с 2004 года любим точность во всем:</h3>
-        <ul class="statistics-info">
-           <li><span class="statistics-info_value">146</span><span class="statistics-info_perc">%</span><br><p>Уровень самоотдачи</p></li>
-           <li><span class="statistics-info_value">100</span><span class="statistics-info_perc">%</span><br><p>Соблюдение сроков</p></li>
-           <li><span class="statistics-info_value">50</span><span class="statistics-info_perc">%</span><br><p>Минимальная предоплата</p></li>
-        </ul>
-      </div>
-      </div>
+            <h3>с 2004 года любим точность во всем:</h3>
+            <ul class="statistics-info">
+              <li><span class="statistics-info_value">146</span><span class="statistics-info_perc">%</span><br><p>Уровень самоотдачи</p></li>
+              <li><span class="statistics-info_value">100</span><span class="statistics-info_perc">%</span><br><p>Соблюдение сроков</p></li>
+              <li><span class="statistics-info_value">50</span><span class="statistics-info_perc">%</span><br><p>Минимальная предоплата</p></li>
+            </ul>
+          </div>
+        </div>
       </section>
-
-
 
       <section class="partners">
         <h2 class="visually-hidden">Наши партнёры</h2>
@@ -123,7 +120,7 @@
             <a href="#" class="partners-list_link">
               <img class="partners-list_img" src="img/logo-2.png" width="209" height="90" alt="Логотип барбершопа Бородинский">
             </a>
-         </li>
+          </li>
           <li class="partners-list_item">
             <a href="#" class="partners-list_link">
               <img class="partners-list_img" src="img/logo-3.png" width="185" height="52" alt="Логотип PINK">
@@ -138,53 +135,48 @@
       </section>
     </div>
 
-      <section class="contacts">
-        <h2 class="visually-hidden">Контактная информация</h2>
-        <div class="contacts_detail">
-          <h3>NЁRDS DESIGN STUDIO</h3>
-          <p class="contacts_text">191186, Санкт-Петербург,<br> ул. Б.Конюшенная, д. 19/8</p>
-          <p class="contacts_tel">тел. +7 (812) 275-75-75</p>
-          <a class="btn contacts-detail_btn" href="write-us.html">напишите нам</a>
-        </div>
-        <div class="contacts_map">
-          <img src="img/map.jpg" width="1440" height="416" alt="карта">
-        </div>
+    <section class="contacts">
+      <h2 class="visually-hidden">Контактная информация</h2>
+      <div class="contacts_detail">
+        <h3>NЁRDS DESIGN STUDIO</h3>
+        <p class="contacts_text">191186, Санкт-Петербург,<br> ул. Б.Конюшенная, д. 19/8</p>
+        <p class="contacts_tel">тел. +7 (812) 275-75-75</p>
+        <a class="btn contacts-detail_btn" href="write-us.html">напишите нам</a>
+      </div>
+      <div class="contacts_map">
+        <img src="img/map.jpg" width="1440" height="416" alt="карта">
+      </div>
 
-        <div class="modal-feedback">
-          <button class="modal-feedback_close" type="button">Закрыть</button>
-              <p>Напишите нам</p>
-
-              <form action="https://echo.htmlacademy.ru" method="post">
-                <div class="modal-flex">
-                  <div>
-                <label for="name-id">Ваше имя:</label><br>
-                  <input class="modal_name" type="text" name="name" id="name-id" placeholder="Имя Фамилия">
-                </div>
-                <div>
-                <label for="email-id"> Ваш e-mail:</label><br>
-                  <input class="modal_email" type="email" name="email" id="email-id" placeholder="email@example.com">
-                </div>
-                <div>
-                <label for="feedback-id">Текст письма:</label><br>
-                  <textarea class="modal_text" name="feedback" id="feedback-id" placeholder="В свободной форме"></textarea>
-                </div>
-              </div>
-                <input class="btn modal_btn" type="submit" value="Отправить">
-
-              </form>
+      <div class="modal-feedback">
+        <button class="modal-feedback_close" type="button">Закрыть</button>
+        <p>Напишите нам</p>
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <div class="modal-flex">
+            <div>
+              <label for="name-id">Ваше имя:</label><br>
+              <input class="modal_name" type="text" name="name" id="name-id" placeholder="Имя Фамилия">
             </div>
-
-      </section>
-
-    </main>
-
-    <footer class="main-footer">
-     <div class="container main-footer-container">
+            <div>
+              <label for="email-id"> Ваш e-mail:</label><br>
+              <input class="modal_email" type="email" name="email" id="email-id" placeholder="email@example.com">
+            </div>
+            <div>
+              <label for="feedback-id">Текст письма:</label><br>
+              <textarea class="modal_text" name="feedback" id="feedback-id" placeholder="В свободной форме"></textarea>
+            </div>
+          </div>
+          <input class="btn modal_btn" type="submit" value="Отправить">
+        </form>
+      </div>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <div class="container main-footer-container">
       <ul class="main-footer_social">
-        <li><a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Вконтакте</span>
-          <svg
-	 width="26" height="15" viewBox="0 0 26 15">
-<path fill="#FFFFFF" d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,0.681,1.727,0.534,1.727,0.534l3.473-0.05
+        <li>
+          <a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Вконтакте</span>
+            <svg width="26" height="15" viewBox="0 0 26 15">
+              <path fill="#FFFFFF" d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,0.681,1.727,0.534,1.727,0.534l3.473-0.05
 	c0,0,1.815-0.112,0.957-1.554c-0.071-0.12-0.503-1.069-2.585-3.022c-2.177-2.043-1.882-1.712,0.739-5.244
 	c1.597-2.153,2.236-3.468,2.036-4.028c-0.192-0.539-1.365-0.399-1.365-0.399L20.69,0.713c-0.381,0.001-0.704,0.119-0.851,0.515
 	c-0.003,0.004-0.621,1.666-1.445,3.079c-1.741,2.989-2.436,3.148-2.724,2.961c-0.661-0.433-0.494-1.737-0.494-2.664
@@ -194,29 +186,31 @@
 	C4.912,0.719,4.562,0.66,4.562,0.66L0.848,0.684c0,0-0.558,0.016-0.763,0.262C-0.097,1.164,0.07,1.614,0.07,1.614
 	s2.909,6.881,6.203,10.347c3.02,3.182,6.452,2.971,6.452,2.971h1.555c0,0,0.469-0.054,0.709-0.312
 	c0.224-0.24,0.214-0.691,0.214-0.691S15.172,11.82,16.138,11.51z"/>
-</svg>
-        </a></li>
-        <li><a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Фейсбук</span>
-          <svg
-	 width="12" height="22" viewBox="0 0 12 22">
-<path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z"/>
-</svg>
-        </a></li>
-        <li><a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Инстаграм</span>
-          <svg
-	 width="21" height="21" viewBox="0 0 21 21" >
-<path fill="#FFFFFF" d="M18,0H3C1.35,0,0,1.35,0,3v15c0,1.65,1.35,3,3,3h15c1.65,0,3-1.35,3-3V3C21,1.35,19.65,0,18,0z M10.5,7
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Фейсбук</span>
+            <svg width="12" height="22" viewBox="0 0 12 22">
+              <path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Инстаграм</span>
+            <svg width="21" height="21" viewBox="0 0 21 21" >
+              <path fill="#FFFFFF" d="M18,0H3C1.35,0,0,1.35,0,3v15c0,1.65,1.35,3,3,3h15c1.65,0,3-1.35,3-3V3C21,1.35,19.65,0,18,0z M10.5,7
 	c1.93,0,3.5,1.57,3.5,3.5S12.43,14,10.5,14S7,12.43,7,10.5S8.57,7,10.5,7z M18,18H3V9h1.181C4.067,9.482,4,9.983,4,10.5
 	c0,3.59,2.91,6.5,6.5,6.5s6.5-2.91,6.5-6.5c0-0.517-0.066-1.018-0.181-1.5H18V18z M18,7h-4V3h4V7z"/>
-</svg>
-        </a></li>
+            </svg>
+          </a>
+        </li>
       </ul>
       <div class="main-footer_text">
         <p class="main-footer_tagline">Давайте дружить, это выгодно!</p>
         <p>Скидка 10% для друзей из социальных сетей</p>
       </div>
     </div>
-    </footer>
-
-  </body>
+  </footer>
+</body>
 </html>
